Ejercicio de formulario

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
             <div class="contact-info">
                 <p><strong>Email:</strong> <a href="mailto:miku@example.com">miku@example.com</a></p>
                 <p><strong>Phone:</strong> +1234567890</p>
-                <p><strong>LinkedIn:</strong> <a href="https://github.com/CatalinaQuij" target="_blank">CatalinaQuij</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://github.com/CatalinaQuij" target="_blank">CatalinaQuij</a>
+                </p>
             </div>
         </section>
+        <div class="signup-btn-container" style="text-align:center; margin-bottom:2rem;">
+            <a href="pages/signup.html" class="signup-btn">Llenar formulario</a>
+        </div>
         <!--Bloque 1: Información Personal Fin-->
 
         <section class="professional-profile">
@@ -60,3 +64,5 @@
         </section>
     </main>
 </body>
+
+</html>
